--- a/ipynb/Distributed Systems and Errors/3 Message Tracking.ipynb
+++ b/ipynb/Distributed Systems and Errors/3 Message Tracking.ipynb
@@ -50,6 +50,7 @@
     "source_hash": "845525ea",
     "execution_start": 1649012533701,
     "execution_millis": 1,
+    "output_cleared": true,
     "deepnote_cell_type": "input-text"
    },
    "source": "amqp_url = ''",
@@ -76,6 +77,7 @@
     "source_hash": "6083972c",
     "execution_start": 1649012533682,
     "execution_millis": 17,
+    "output_cleared": true,
     "deepnote_cell_type": "input-text"
    },
    "source": "tenant = 'TEAM10'",
@@ -84,12 +86,12 @@
   },
   {
    "cell_type": "markdown",
-   "source": "4. Download the process model ([download BPMN model - here](https://cdn.jsdelivr.net/gh/DigiBP/digibpnotes@main/modelling/Distributed%20Systems%20and%20Errors/REST.bpmn)) and open it in Camunda Modeler.\n5. Deploy the process model with Camunda Modeler to the classroom instance with your **tenant**.",
+   "source": "4. Download the process model ([download BPMN model - here](https://cdn.jsdelivr.net/gh/DigiBP/digibpnotes@main/modelling/Distributed%20Systems%20and%20Errors/Track-Flow.bpmn)) and open it in the Camunda Modeler.\n5. Deploy the process model with the Camunda Modeler to the classroom instance with your **tenant**.\n6. Make sure that you have the correct Camunda engine URL:",
    "metadata": {
     "cell_id": "388aecc03f014853899664f24bf52576",
     "tags": [],
     "deepnote_cell_type": "markdown",
-    "deepnote_cell_height": 94.80000305175781
+    "deepnote_cell_height": 120.19999694824219
    }
   },
   {
@@ -102,11 +104,22 @@
     "source_hash": "2f31b90",
     "execution_start": 1649012533700,
     "execution_millis": 1,
+    "output_cleared": true,
     "deepnote_cell_type": "input-text"
    },
    "source": "camunda_eninge_rest = 'https://digibp.herokuapp.com/engine-rest'",
    "execution_count": null,
    "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "source": "7. Run the notebook in Deepnote.\n8. Investigate the process instantiated in the Camunda Cockpit and inspect the Deepnote output.",
+   "metadata": {
+    "cell_id": "a1cdc3e6314a489b999f087b6fc1e45e",
+    "tags": [],
+    "deepnote_cell_type": "markdown",
+    "deepnote_cell_height": 94.80000305175781
+   }
   },
   {
    "cell_type": "code",
@@ -118,12 +131,33 @@
     "execution_start": 1649012533702,
     "execution_millis": 1,
     "is_code_hidden": true,
+    "output_cleared": true,
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 74.80000305175781
    },
    "source": "if not amqp_url:\n    import os\n    amqp_url = os.environ.get('AMQP_URL')",
    "execution_count": null,
    "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "source": "## Message Model",
+   "metadata": {
+    "cell_id": "3378a9482fb1484998c5f2f81d16d407",
+    "tags": [],
+    "is_collapsed": false,
+    "deepnote_cell_type": "text-cell-h2"
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": "Below you will find the message model that is used for the message exchange, including `businessKey` generation using a UUID and `tenant` configuration:",
+   "metadata": {
+    "cell_id": "c5bf8e6e3dd242b99c0e5d6f2cbd42c9",
+    "tags": [],
+    "deepnote_cell_type": "markdown",
+    "deepnote_cell_height": 52.399993896484375
+   }
   },
   {
    "cell_type": "code",
@@ -134,12 +168,33 @@
     "source_hash": "94d1c4be",
     "execution_start": 1649012533705,
     "execution_millis": 33,
+    "output_cleared": true,
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 405
    },
    "source": "from typing import Optional\nfrom pydantic import BaseModel\nimport uuid\n\n\nclass Message(BaseModel):\n    businessKey: str\n    tenant: str\n    command: Optional[str] = None\n    event: Optional[str] = None\n    payload: Optional[str] = None\n\n\nmessage = Message(\n    **{\n        \"businessKey\": str(uuid.uuid1()),\n        \"tenant\": tenant\n    }\n)",
    "execution_count": null,
    "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "source": "## Message Queues and Routing",
+   "metadata": {
+    "cell_id": "6d0f507330da4423922479aa7d0db8e9",
+    "tags": [],
+    "is_collapsed": false,
+    "deepnote_cell_type": "text-cell-h2"
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": "In the following, the [Pika](https://pika.readthedocs.io) library providing AMQP protocol in Python is used to connect to RabbitMQ and declare four queues `order`, `payment`, `inventory`, and the **flow tracking** queue `order_fulfillment`. In order to be able to track the message exchange and thus the flow, so-called bindings with `exchange` and routings (`routing_key`) is defined.",
+   "metadata": {
+    "cell_id": "337e4f773e034985b20b6049f1a8b151",
+    "tags": [],
+    "deepnote_cell_type": "markdown",
+    "deepnote_cell_height": 74.80000305175781
+   }
   },
   {
    "cell_type": "code",
@@ -150,12 +205,33 @@
     "source_hash": "d07d0a59",
     "execution_start": 1649012533738,
     "execution_millis": 1759,
+    "output_cleared": true,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 711
+    "deepnote_cell_height": 549
    },
-   "source": "import pika\n\nparams = pika.URLParameters(amqp_url)\nconnection = pika.BlockingConnection(params)  # Connect to CloudAMQP\nchannel = connection.channel()  # Start a channel\nchannel.queue_declare(queue=\"order\")  # Declare a queue\nchannel.queue_declare(queue=\"payment\")  # Declare a queue\nchannel.queue_declare(queue=\"inventory\")  # Declare a queue\nchannel.queue_declare(queue=\"order_fulfillment\") # Declare a queue\n\nchannel.exchange_declare(exchange=tenant)\n\nchannel.queue_bind(\n    exchange=tenant, queue=\"order\", routing_key=\"order\"\n)\nchannel.queue_bind(\n    exchange=tenant, queue=\"payment\", routing_key=\"payment\"\n)\nchannel.queue_bind(\n    exchange=tenant, queue=\"inventory\", routing_key=\"inventory\"\n)\nchannel.queue_bind(\n    exchange=tenant, queue=\"order_fulfillment\", routing_key=\"order\"\n)\nchannel.queue_bind(\n    exchange=tenant, queue=\"order_fulfillment\", routing_key=\"payment\"\n)\nchannel.queue_bind(\n    exchange=tenant, queue=\"order_fulfillment\", routing_key=\"inventory\"\n)\nchannel.queue_bind(\n    exchange=tenant, queue=\"order_fulfillment\", routing_key=\"shipment\"\n)\n\nconnection.close()\n",
+   "source": "import pika\n\nparams = pika.URLParameters(amqp_url)\n# Connect to RabbitMQ\nconnection = pika.BlockingConnection(params)\nchannel = connection.channel()\n# Declare order queue\nchannel.queue_declare(queue=\"order\")\n# Declare payment queue\nchannel.queue_declare(queue=\"payment\")\n# Declare inventory queue\nchannel.queue_declare(queue=\"inventory\")\n# Declare order fulfillment queue\nchannel.queue_declare(queue=\"order_fulfillment\")\n\n# Declare message routings\nchannel.exchange_declare(exchange=tenant)\nchannel.queue_bind(exchange=tenant, queue=\"order\", routing_key=\"order\")\nchannel.queue_bind(exchange=tenant, queue=\"payment\", routing_key=\"payment\")\nchannel.queue_bind(exchange=tenant, queue=\"inventory\", routing_key=\"inventory\")\nchannel.queue_bind(exchange=tenant, queue=\"order_fulfillment\", routing_key=\"order\")\nchannel.queue_bind(exchange=tenant, queue=\"order_fulfillment\", routing_key=\"payment\")\nchannel.queue_bind(exchange=tenant, queue=\"order_fulfillment\", routing_key=\"inventory\")\nchannel.queue_bind(exchange=tenant, queue=\"order_fulfillment\", routing_key=\"shipment\")\n\nconnection.close()\n",
    "execution_count": null,
    "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "source": "## Initial Event",
+   "metadata": {
+    "cell_id": "29ebe4be39e840e1aa090a78e40ea615",
+    "tags": [],
+    "is_collapsed": false,
+    "deepnote_cell_type": "text-cell-h2"
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": "In the following, an initial event `Order_Placed` is published to mimic a checkout and initialize the **tracked** choreography:",
+   "metadata": {
+    "cell_id": "b04fa7e41e56457084d419c266505586",
+    "tags": [],
+    "deepnote_cell_type": "markdown",
+    "deepnote_cell_height": 52.399993896484375
+   }
   },
   {
    "cell_type": "code",
@@ -166,19 +242,33 @@
     "source_hash": "f09c4f91",
     "execution_start": 1649012535502,
     "execution_millis": 762,
-    "output_cleared": false,
+    "output_cleared": true,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 364.20001220703125
+    "deepnote_cell_height": 297
    },
-   "source": "import pika, pickle\n\nparams = pika.URLParameters(amqp_url)\nconnection = pika.BlockingConnection(params)\nchannel = connection.channel()\n\nmessage.event=\"Order_Placed\"\n\n# Send message\nchannel.basic_publish(\n    exchange=tenant, routing_key=\"order\", body=pickle.dumps(message)\n)\nprint(\"Message sent to consumer\")\nconnection.close()\n",
+   "source": "import pika, pickle\n\nparams = pika.URLParameters(amqp_url)\nconnection = pika.BlockingConnection(params)\nchannel = connection.channel()\n\n# Define and publish (send) the Order_Placed event\nmessage.event = \"Order_Placed\"\nchannel.basic_publish(exchange=tenant, routing_key=\"order\", body=pickle.dumps(message))\nprint(\"Order_Placed message sent.\")\n\nconnection.close()\n",
    "execution_count": null,
-   "outputs": [
-    {
-     "name": "stdout",
-     "text": "Message sent to consumer\n",
-     "output_type": "stream"
-    }
-   ]
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "source": "## Message Subscription of Microservices and Tracker",
+   "metadata": {
+    "cell_id": "fc6cda64afcd4630b94e3463352214a9",
+    "tags": [],
+    "is_collapsed": false,
+    "deepnote_cell_type": "text-cell-h2"
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": "In the following, three microservices are imitated, each of which has a subscription of one queue. After a message is received, a subsequent event is queued again. In addition, an `order_fulfillment` microservice is implemented, which receives all events of the choreography and forwards them to the BPMN process as messages via the Camunda REST API.",
+   "metadata": {
+    "cell_id": "bf9c5cef93464df7b7a7bf19355ef468",
+    "tags": [],
+    "deepnote_cell_type": "markdown",
+    "deepnote_cell_height": 74.80000305175781
+   }
   },
   {
    "cell_type": "code",
@@ -189,19 +279,13 @@
     "source_hash": "9f1fe116",
     "execution_start": 1649012536265,
     "execution_millis": 10766,
-    "output_cleared": false,
+    "output_cleared": true,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 1459.5999755859375
+    "deepnote_cell_height": 1323
    },
-   "source": "import pika, pickle, requests, signal\n\nparams = pika.URLParameters(amqp_url)\nconnection = pika.BlockingConnection(params)\nchannel = connection.channel()\n\n# Create functions which are called on incoming messages\ndef order_fulfillment(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    request_data = {\n        \"messageName\": message.event,\n        \"businessKey\": message.businessKey,\n        \"tenantId\": message.tenant,\n    }\n\n    response = requests.post(camunda_eninge_rest + \"/message\", json=request_data)\n    return\n\n\ndef payment(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    message.event = \"Payment_Done\"\n    channel.basic_publish(\n        exchange=tenant, routing_key=\"payment\", body=pickle.dumps(message)\n    )\n    return\n\n\ndef inventory(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    message.event = \"Goods_Fetched\"\n    channel.basic_publish(\n        exchange=tenant, routing_key=\"inventory\", body=pickle.dumps(message)\n    )\n    return\n\n\ndef shipment(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    message.event = \"Goods_Shipped\"\n    channel.basic_publish(\n        exchange=tenant, routing_key=\"shipment\", body=pickle.dumps(message)\n    )\n    return\n\n\n# Set up subscription on the queue\nchannel.basic_consume(\"order_fulfillment\", order_fulfillment, auto_ack=True)\nchannel.basic_consume(\"order\", payment, auto_ack=True)\nchannel.basic_consume(\"payment\", inventory, auto_ack=True)\nchannel.basic_consume(\"inventory\", shipment, auto_ack=True)\n\n\ndef close_handler(signal, frame):\n    connection.close()\n\n\n# Start consuming\ntry:\n    signal.signal(signal.SIGINT, close_handler)\n    channel.start_consuming()\nexcept Exception as e:\n    print(e)\n",
+   "source": "import pika, pickle, requests, signal\n\nparams = pika.URLParameters(amqp_url)\nconnection = pika.BlockingConnection(params)\nchannel = connection.channel()\n\n# Order fulfillment tracking microservice callback function\ndef order_fulfillment(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    request_data = {\n        \"messageName\": message.event,\n        \"businessKey\": message.businessKey,\n        \"tenantId\": message.tenant,\n    }\n    response = requests.post(camunda_eninge_rest + \"/message\", json=request_data)\n    return\n\n\n# Payment microservice callback function\ndef payment(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    message.event = \"Payment_Done\"\n    channel.basic_publish(\n        exchange=tenant, routing_key=\"payment\", body=pickle.dumps(message)\n    )\n    return\n\n\n# Inventory microservice callback function\ndef inventory(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    message.event = \"Goods_Fetched\"\n    channel.basic_publish(\n        exchange=tenant, routing_key=\"inventory\", body=pickle.dumps(message)\n    )\n    return\n\n\n# Shipment microservice callback function\ndef shipment(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    message.event = \"Goods_Shipped\"\n    channel.basic_publish(\n        exchange=tenant, routing_key=\"shipment\", body=pickle.dumps(message)\n    )\n    return\n\n\n# Subscriptions on queues\nchannel.basic_consume(\"order_fulfillment\", order_fulfillment, auto_ack=True)\nchannel.basic_consume(\"order\", payment, auto_ack=True)\nchannel.basic_consume(\"payment\", inventory, auto_ack=True)\nchannel.basic_consume(\"inventory\", shipment, auto_ack=True)\n\n\ndef close_handler(signal, frame):\n    connection.close()\n\n\n# Run consuming server\ntry:\n    signal.signal(signal.SIGINT, close_handler)\n    channel.start_consuming()\nexcept Exception as e:\n    print(e)\n",
    "execution_count": null,
-   "outputs": [
-    {
-     "name": "stdout",
-     "text": "Received businessKey='9288cad4-b380-11ec-b04d-0ad9bffcddd2' tenant='TEAM10' command=None event='Order_Placed' payload=None\nReceived businessKey='9288cad4-b380-11ec-b04d-0ad9bffcddd2' tenant='TEAM10' command=None event='Order_Placed' payload=None\nReceived businessKey='9288cad4-b380-11ec-b04d-0ad9bffcddd2' tenant='TEAM10' command=None event='Payment_Done' payload=None\nReceived businessKey='9288cad4-b380-11ec-b04d-0ad9bffcddd2' tenant='TEAM10' command=None event='Payment_Done' payload=None\nReceived businessKey='9288cad4-b380-11ec-b04d-0ad9bffcddd2' tenant='TEAM10' command=None event='Goods_Fetched' payload=None\nReceived businessKey='9288cad4-b380-11ec-b04d-0ad9bffcddd2' tenant='TEAM10' command=None event='Goods_Fetched' payload=None\nReceived businessKey='9288cad4-b380-11ec-b04d-0ad9bffcddd2' tenant='TEAM10' command=None event='Goods_Shipped' payload=None\n[Errno 9] Bad file descriptor\n",
-     "output_type": "stream"
-    }
-   ]
+   "outputs": []
   },
   {
    "cell_type": "markdown",
