--- a/ipynb/Distributed Systems and Errors/4 Pub Sub.ipynb
+++ b/ipynb/Distributed Systems and Errors/4 Pub Sub.ipynb
@@ -1,20 +1,44 @@
 {
  "cells": [
   {
-   "cell_type": "code",
+   "cell_type": "markdown",
+   "source": "# Pub/Sub Style",
    "metadata": {
-    "deepnote_variable_name": "tenant",
-    "deepnote_variable_value": "TEAM10",
-    "deepnote_to_be_reexecuted": false,
-    "source_hash": "6083972c",
-    "execution_start": 1648998458432,
-    "execution_millis": 0,
-    "cell_id": "4a92ab76-6e3a-4423-b5a7-64f77332e510",
-    "deepnote_cell_type": "input-text"
-   },
-   "source": "tenant = 'TEAM10'",
-   "execution_count": null,
-   "outputs": []
+    "cell_id": "b27dbaab4fa140fb946945b79b86bcae",
+    "tags": [],
+    "is_collapsed": false,
+    "deepnote_cell_type": "text-cell-h1"
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": "*Characteristics:*\n- Collaboration Style: **Commands = Orchestration**\n- System Style: **Reactive**\n- Communication Style: **Synchronous (Blocking)**\n- Flow: **Managed**",
+   "metadata": {
+    "cell_id": "33bd37b9f88b4001a9a38fa73494d626",
+    "tags": [],
+    "deepnote_cell_type": "markdown",
+    "deepnote_cell_height": 181
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": "## Process / Scenario",
+   "metadata": {
+    "cell_id": "8d68d2bdfa9b4f7e85ad86b3007e2a59",
+    "tags": [],
+    "is_collapsed": false,
+    "deepnote_cell_type": "text-cell-h2"
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": "The following \"Order Fulfilment\" process model orchestrates three microservices which are defined below. In contrast to a declarative setting (e.g., REST), in this **reactive** setting the coupling lies on the **receiving** side as the three microservices **subscribe** for a **command topic**.\n\n![](/images/Pub-Sub.png)\n\n### Tasks\nInstruction to run/do the exercise:\n1. Download the process model ([download BPMN model - here](https://cdn.jsdelivr.net/gh/DigiBP/digibpnotes@main/modelling/Distributed%20Systems%20and%20Errors/Pub-Sub.bpmn)) and open it in the Camunda Modeler.\n2. Deploy the process model with the Camunda Modeler to the classroom instance with your **tenant**.\n3. Make sure that you have the correct Camunda engine URL:",
+   "metadata": {
+    "cell_id": "42cc775e36364739807bc6ec0d50e51e",
+    "tags": [],
+    "deepnote_cell_type": "markdown",
+    "deepnote_cell_height": 702.5
+   }
   },
   {
    "cell_type": "code",
@@ -33,6 +57,62 @@
    "outputs": []
   },
   {
+   "cell_type": "markdown",
+   "source": "4. Run the process model from the the Camunda Modeler.\n5. Make sure that you use the right tenant:",
+   "metadata": {
+    "cell_id": "d5390e90d7a14995a5cffa147492b168",
+    "tags": [],
+    "deepnote_cell_type": "markdown",
+    "deepnote_cell_height": 94.80000305175781
+   }
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "deepnote_variable_name": "tenant",
+    "deepnote_variable_value": "TEAM10",
+    "deepnote_to_be_reexecuted": false,
+    "source_hash": "6083972c",
+    "execution_start": 1648998458432,
+    "execution_millis": 0,
+    "cell_id": "4a92ab76-6e3a-4423-b5a7-64f77332e510",
+    "deepnote_cell_type": "input-text"
+   },
+   "source": "tenant = 'TEAM10'",
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "source": "6. Run the notebook in Deepnote.\n7. Investigate the process instantiated in the Camunda Cockpit and inspect the Deepnote output.",
+   "metadata": {
+    "cell_id": "7c250bfe4ffb43158e4cd79a3485e19c",
+    "tags": [],
+    "deepnote_cell_type": "markdown",
+    "deepnote_cell_height": 94.80000305175781
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": "## Topic Subscription of Microservices",
+   "metadata": {
+    "cell_id": "be1a5e31bb40437f9ddfc5c16fac22c7",
+    "tags": [],
+    "is_collapsed": false,
+    "deepnote_cell_type": "text-cell-h2"
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": "In the following, three microservices are imitated, each of which has a subscription of a topic command to be received. After a message is received, the task is completed. Here, a [custom-developed Camunda client worker implementation in Python](https://github.com/DigiBP/digibp-camunda-external-python-task/blob/master/cam.py) is used, which encapsulates the [external client REST API](https://docs.camunda.org/manual/latest/reference/rest/external-task/) of Camunda.",
+   "metadata": {
+    "cell_id": "0e33300bebee452bbd78d87318654a15",
+    "tags": [],
+    "deepnote_cell_type": "markdown",
+    "deepnote_cell_height": 74.80000305175781
+   }
+  },
+  {
    "cell_type": "code",
    "metadata": {
     "cell_id": "f1fdb4464d114a069c76a11964600374",
@@ -43,9 +123,9 @@
     "execution_millis": 7902,
     "output_cleared": true,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 603
+    "deepnote_cell_height": 675
    },
-   "source": "import httpimport\n\nwith httpimport.github_repo(\"DigiBP\", \"digibp-camunda-external-python-task\", \"cam\"):\n    import cam\n\nworker = cam.Client(camunda_eninge_rest)\n\n\ndef retrievePayment(taskid, response):\n    print(\"Payment Done\")\n    worker.complete(taskid)\n\n\ndef fetchGoods(taskid, response):\n    print(\"Goods Fetched\")\n    worker.complete(taskid)\n\n\ndef shipGoods(taskid, response):\n    print(\"Goods Shipped\")\n    worker.complete(taskid)\n\n\nworker.subscribe(\"retrievePayment\", retrievePayment, tenant)\nworker.subscribe(\"fetchGoods\", fetchGoods, tenant)\nworker.subscribe(\"shipGoods\", shipGoods, tenant)\n\n\nworker.polling()\n",
+   "source": "import httpimport\n\nwith httpimport.github_repo(\"DigiBP\", \"digibp-camunda-external-python-task\", \"cam\"):\n    import cam\n\n# Initialize worker client\nworker = cam.Client(camunda_eninge_rest)\n\n# Payment microservice callback function\ndef retrievePayment(taskid, response):\n    print(\"Payment Done\")\n    worker.complete(taskid)\n\n\n# Inventory microservice callback function\ndef fetchGoods(taskid, response):\n    print(\"Goods Fetched\")\n    worker.complete(taskid)\n\n\n# Shipment microservice callback function\ndef shipGoods(taskid, response):\n    print(\"Goods Shipped\")\n    worker.complete(taskid)\n\n\n# Subscriptions on topics\nworker.subscribe(\"retrievePayment\", retrievePayment, tenant)\nworker.subscribe(\"fetchGoods\", fetchGoods, tenant)\nworker.subscribe(\"shipGoods\", shipGoods, tenant)\n\n# Run polling server\nworker.polling()\n",
    "execution_count": null,
    "outputs": []
   },
