--- a/ipynb/Distributed Systems and Errors/5 Error.ipynb
+++ b/ipynb/Distributed Systems and Errors/5 Error.ipynb
@@ -1,20 +1,24 @@
 {
  "cells": [
   {
-   "cell_type": "code",
+   "cell_type": "markdown",
+   "source": "# Error Handling",
    "metadata": {
-    "deepnote_variable_name": "tenant",
-    "deepnote_variable_value": "TEAM10",
-    "deepnote_to_be_reexecuted": false,
-    "source_hash": "6083972c",
-    "execution_start": 1649000503482,
-    "execution_millis": 49,
-    "cell_id": "59d6c2bb-bc62-4e33-aa3f-81de2ab2dbaf",
-    "deepnote_cell_type": "input-text"
-   },
-   "source": "tenant = 'TEAM10'",
-   "execution_count": null,
-   "outputs": []
+    "cell_id": "88ab08eb930d4bf49ef8528797a77143",
+    "tags": [],
+    "is_collapsed": false,
+    "deepnote_cell_type": "text-cell-h1"
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": "The following \"Order Fulfilment\" process model orchestrates three microservices which are defined below. However, there is a 50/50 chance that the request for payment or fetching goods will fail.\n\n![](/images/Error-Event-Sub.png)\n\n### Tasks\nInstruction to run/do the exercise:\n1. Download the initial process model ([download BPMN model - here](https://cdn.jsdelivr.net/gh/DigiBP/digibpnotes@main/modelling/Distributed%20Systems%20and%20Errors/Error-Event-Sub-Initial.bpmn)) and open it in the Camunda Modeler.\n2. Extend the model as shown above in the final model using error events and compensations.\n3. Deploy the process model with the Camunda Modeler to the classroom instance with your **tenant**.\n4. Make sure that you have the correct Camunda engine URL:",
+   "metadata": {
+    "cell_id": "5f034ec227ab42599244aedf646ee1c4",
+    "tags": [],
+    "deepnote_cell_type": "markdown",
+    "deepnote_cell_height": 926.0833129882812
+   }
   },
   {
    "cell_type": "code",
@@ -33,6 +37,62 @@
    "outputs": []
   },
   {
+   "cell_type": "markdown",
+   "source": "5. Run the process model from the the Camunda Modeler.\n6. Make sure that you use the right tenant:",
+   "metadata": {
+    "cell_id": "c52a059fc4024f9ba97e5e3618e78def",
+    "tags": [],
+    "deepnote_cell_type": "markdown",
+    "deepnote_cell_height": 94.80000305175781
+   }
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "deepnote_variable_name": "tenant",
+    "deepnote_variable_value": "TEAM10",
+    "deepnote_to_be_reexecuted": false,
+    "source_hash": "6083972c",
+    "execution_start": 1649000503482,
+    "execution_millis": 49,
+    "cell_id": "59d6c2bb-bc62-4e33-aa3f-81de2ab2dbaf",
+    "deepnote_cell_type": "input-text"
+   },
+   "source": "tenant = 'TEAM10'",
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "source": "7. Run the notebook in Deepnote.\n8. Investigate the process instantiated in the Camunda Cockpit and inspect the Deepnote output.",
+   "metadata": {
+    "cell_id": "2e9ffe6ea5ce4f59ac10a1bdf99f2a5b",
+    "tags": [],
+    "deepnote_cell_type": "markdown",
+    "deepnote_cell_height": 94.80000305175781
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": "## Topic Subscription of (sometimes) failing Microservices",
+   "metadata": {
+    "cell_id": "aee644c9853346da9828a7cf7a7af3b5",
+    "tags": [],
+    "is_collapsed": false,
+    "deepnote_cell_type": "text-cell-h2"
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": "In the following, three microservices are imitated, each of which has a subscription of a topic command to be received. After a message is received, the task is completed. Here, a [custom-developed Camunda client worker implementation in Python](https://github.com/DigiBP/digibp-camunda-external-python-task/blob/master/cam.py) is used, which encapsulates the [external client REST API](https://docs.camunda.org/manual/latest/reference/rest/external-task/) of Camunda.\n\nThere is a random 50/50 chance that `retrievePayment` or `fetchGoods` are failing by sending a BPMN error.",
+   "metadata": {
+    "cell_id": "f6b55939357043bdb9ebeaa15394f90e",
+    "tags": [],
+    "deepnote_cell_type": "markdown",
+    "deepnote_cell_height": 111.19999694824219
+   }
+  },
+  {
    "cell_type": "code",
    "metadata": {
     "tags": [],
@@ -43,9 +103,9 @@
     "cell_id": "00002-d78e23ff-7eea-4931-86bb-cfc9ee063770",
     "output_cleared": true,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 837
+    "deepnote_cell_height": 945
    },
-   "source": "import httpimport, random\n\nwith httpimport.github_repo(\"DigiBP\", \"digibp-camunda-external-python-task\", \"cam\"):\n    import cam\n\nworker = cam.Client(camunda_eninge_rest)\n\n\ndef retrievePayment(taskid, response):\n    if random.randint(0, 1):\n        print(\"Payment Done\")\n        worker.complete(taskid)\n    else:\n        print(\"PaymentFailed\")\n        worker.error(taskid, \"PaymentFailed\")\n\ndef refundPayment(taskid, response):\n    print(\"Refund Payment Done\")\n    worker.complete(taskid)\n\n\ndef fetchGoods(taskid, response):\n    if random.randint(0, 1):\n        print(\"Goods Fetched\")\n        worker.complete(taskid)\n    else:\n        print(\"OutOfStock\")\n        worker.error(taskid, \"OutOfStock\")\n\n\ndef shipGoods(taskid, response):\n    print(\"Goods Shipped\")\n    worker.complete(taskid)\n\n\nworker.subscribe(\"retrievePayment\", retrievePayment, tenant)\nworker.subscribe(\"refundPayment\", refundPayment, tenant)\nworker.subscribe(\"fetchGoods\", fetchGoods, tenant)\nworker.subscribe(\"shipGoods\", shipGoods, tenant)\n\n\nworker.polling()\n",
+   "source": "import httpimport, random\n\nwith httpimport.github_repo(\"DigiBP\", \"digibp-camunda-external-python-task\", \"cam\"):\n    import cam\n\n# Initialize worker client\nworker = cam.Client(camunda_eninge_rest)\n\n# Payment microservice callback function\ndef retrievePayment(taskid, response):\n    if random.randint(0, 1):\n        print(\"Payment Done\")\n        worker.complete(taskid)\n    else:\n        print(\"PaymentFailed\")\n        worker.error(taskid, \"PaymentFailed\")\n\n\n# Refund payment microservice callback function\ndef refundPayment(taskid, response):\n    print(\"Refund Payment Done\")\n    worker.complete(taskid)\n\n\n# Inventory microservice callback function\ndef fetchGoods(taskid, response):\n    if random.randint(0, 1):\n        print(\"Goods Fetched\")\n        worker.complete(taskid)\n    else:\n        print(\"OutOfStock\")\n        worker.error(taskid, \"OutOfStock\")\n\n\n# Shipment microservice callback function\ndef shipGoods(taskid, response):\n    print(\"Goods Shipped\")\n    worker.complete(taskid)\n\n\n# Subscriptions on topics\nworker.subscribe(\"retrievePayment\", retrievePayment, tenant)\nworker.subscribe(\"refundPayment\", refundPayment, tenant)\nworker.subscribe(\"fetchGoods\", fetchGoods, tenant)\nworker.subscribe(\"shipGoods\", shipGoods, tenant)\n\n# Run polling server\nworker.polling()\n",
    "execution_count": null,
    "outputs": []
   },
